--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -126,16 +126,16 @@ patch:
     # 以下是一組容錯拼寫，《漢語拼音》方案以前者爲正
     - derive/^([nl])ve$/$1ue/          # nve = nue, lve = lue
     - derive/^([jqxy])u/$1v/           # ju = jv,
-    - derive/un$/uen/                  # gun = guen,
-    - derive/ui$/uei/                  # gui = guei,
-    - derive/iu$/iou/                  # jiu = jiou,
+    # - derive/un$/uen/                  # gun = guen,
+    # - derive/ui$/uei/                  # gui = guei,
+    # - derive/iu$/iou/                  # jiu = jiou,
 
     # 自動糾正一些常見的按鍵錯誤
-    - derive/([aeiou])ng$/$1gn/        # dagn => dang 
-    - derive/([dtngkhrzcs])o(u|ng)$/$1o/  # zho => zhong|zhou
-    - derive/ong$/on/                  # zhonguo => zhong guo
-    - derive/ao$/oa/                   # hoa => hao
-    - derive/([iu])a(o|ng?)$/a$1$2/    # tain => tian
+    # - derive/([aeiou])ng$/$1gn/        # dagn => dang 
+    # - derive/([dtngkhrzcs])o(u|ng)$/$1o/  # zho => zhong|zhou
+    # - derive/ong$/on/                  # zhonguo => zhong guo
+    # - derive/ao$/oa/                   # hoa => hao
+    # - derive/([iu])a(o|ng?)$/a$1$2/    # tain => tian
 
   # 分尖團後 v => ü 的改寫條件也要相應地擴充：
   #'translator/preedit_format':
