--- a/luna_pinyin_simp.custom.yaml
+++ b/luna_pinyin_simp.custom.yaml
@@ -136,8 +136,8 @@ patch:
     # 樣例足夠了，其他請自己總結……
 
     # # 模糊音定義先於簡拼定義，方可令簡拼支持以上模糊音
-    # - abbrev/^([a-z]).+$/$1/           # 簡拼（首字母）
-    # - abbrev/^([zcs]h).+$/$1/          # 簡拼（zh, ch, sh）
+    - abbrev/^([a-z]).+$/$1/           # 簡拼（首字母）
+    - abbrev/^([zcs]h).+$/$1/          # 簡拼（zh, ch, sh）
 
     # 以下是一組容錯拼寫，《漢語拼音》方案以前者爲正
     - derive/^([nl])ve$/$1ue/          # nve = nue, lve = lue
