--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -47,7 +47,7 @@ import_tables:
   - luna_pinyin.poetry
   - luna_pinyin.cn_en
   - luna_pinyin.kaomoji
-  - luna_pinyin.contact
+  # - luna_pinyin.contact
 ...
 
 
