--- a/ibus_rime.custom.yaml
+++ b/ibus_rime.custom.yaml
@@ -1,48 +1,2 @@
 patch:
-  show_notifications_when: appropriate          # 状态通知，适当，也可设为全开（always）全关（never）
-
-  style/color_scheme: starcraft                # 方案命名，不能有空格
-  style/horizontal: true
-
-  preset_color_schemes:
-  "preset_color_schemes/starcraft":  # 在配色方案列表裏加入標識爲 starcraft 的新方案
-    name: 星際我爭霸／StarCraft
-    author: Contralisk <contralisk@gmail.com>, original artwork by Blizzard Entertainment
-    text_color: 0xccaa88             # 編碼行文字顏色，24 位色值，用十六進制書寫方便些，順序是藍綠紅 0xBBGGRR
-    candidate_text_color: 0x30bb55   # 候選項文字顏色，當與文字顏色不同時指定
-    back_color: 0x000000             # 底色
-    border_color: 0x1010a0           # 邊框顏色，與底色相同則爲無邊框的效果
-    hilited_text_color: 0xfecb96     # 高亮文字，即與當前高亮候選對應的那部份輸入碼
-    hilited_back_color: 0x000000     # 設定高亮文字的底色，可起到凸顯高亮部份的作用
-    hilited_candidate_text_color: 0x60ffa8  # 高亮候選項的文字顏色，要醒目！
-    hilited_candidate_back_color: 0x000000  # 高亮候選項的底色，若與背景色不同就會顯出光棒
-    mritd_dark:
-      name: 漠然/mritd dark
-      author: mritd <mritd1234@gmail.com>
-      horizontal: true                          # 水平排列
-      inline_preedit: false                      # 单行显示，false双行显示
-      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
-      corner_radius: 5                          # 候选条圆角
-      hilited_corner_radius: 3                  # 高亮圆角
-      border_height: 6                          # 窗口边界高度，大于圆角半径才生效
-      border_width: 6                           # 窗口边界宽度，大于圆角半径才生效
-      border_color_width: 0
-      #font_face: "PingFangSC"                   # 候选词字体
-      font_point: 32                            # 候选字词大小
-      label_font_point: 14                      # 候选编号大小
-
-      text_color: 0xdedddd                      # 拼音行文字颜色，24位色值，16进制，BGR顺序
-      back_color: 0x4b4b4b                      # 候选条背景色
-      label_color: 0x888785                     # 预选栏编号颜色
-      border_color: 0x4b4b4b                    # 边框色
-      candidate_text_color: 0xffffff            # 预选项文字颜色
-      hilited_text_color: 0xdedddd              # 高亮拼音 (需要开启内嵌编码)
-      hilited_back_color: 0x252320              # 高亮拼音 (需要开启内嵌编码)
-      hilited_candidate_text_color: 0xFFE696    # 第一候选项文字颜色
-      hilited_candidate_back_color: 0x4b4b4b    # 第一候选项背景背景色
-      hilited_candidate_label_color: 0xffffff   # 第一候选项编号颜色
-      comment_text_color: 0xdedddd              # 拼音等提示文字颜色
-      #hilited_comment_text_color: 0xdedddd      # 注解文字高亮
-
-
-  "app_options/com.runningwithcrayons.Alfred-3/ascii_mode": true
+  style/horizontal: true                        # 横排/竖排
