--- a/luna_pinyin_simp.custom.yaml
+++ b/luna_pinyin_simp.custom.yaml
@@ -2,17 +2,8 @@
 
 patch:
 
-  switches:
-    - name: ascii_mode
-      reset: 0
-      states: ["中文", "西文"]
-    - name: full_shape
-      states: ["半角", "全角"]
-    - name: simplification
-      reset: 1                  # 默認啓用「繁→簡」轉換。
-      states: [ "漢字", "汉字" ]
-    - name: ascii_punct
-      states: ["。，", "．，"]
+  schema:
+    name: 明月拼音·简化字
 
   punctuator:
     import_preset: symbols
@@ -22,5 +13,5 @@ patch:
 
   recognizer/patterns/punct: "^/([a-z]+|[0-9]0?)$"
 
-  # 載入朙月拼音擴充詞庫
+  # 加载明月拼音扩充词库
   translator/dictionary: luna_pinyin.extended
