--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -5,7 +5,7 @@ patch:
 
   schema_list: # 选择输入法方案
   - schema: luna_pinyin_fluency   # 语句流：支持繁体、简体
-  - schema: luna_pinyin_simp      # 朙月拼音：简体字
+  # - schema: luna_pinyin_simp      # 朙月拼音：简体字
 
   switcher/caption: "〔输入法设置〕" # 切换器被调用时屏幕显示的名字
 
